samples/_failures_safe/1761427138_4265c2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c7709fda.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_c7709fda.c:183:5: error: expected ‘,’ or ‘;’ at end of input
  183 |     for (int i = 0
      |     ^~~
./samples/SAFE/__tmp_c7709fda.c:183:5: error: expected declaration or statement at end of input
